--- a/Resume - one page/Résumé.tex
+++ b/Resume - one page/Résumé.tex
@@ -63,7 +63,7 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[rectangle,noedge,right]{picture.jpg}  
-\name{<First>}{<LastName>}
+\name{Tyler}{Dodd}
 \position{\ } 
 
 %\mobile{(+00)123-456-789}
